[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "video_processing_toolkit"
version = "0.1.0"
description = "A Python toolkit for slicing, annotating, and processing video files for data analysis and machine learning."
readme = "README.rst"
authors = [
  {name = "Alyssia Fourali, Loic Scoth, Mohamed Said Aimen Lamri, Gaspar Henniaux", email = "alyssia.fourali.etu@univ-lille.fr"}
]
maintainers = [
  {name = "Alyssia Fourali, Loic Scoth, Mohamed Said Aimen Lamri, Gaspar Henniaux", email = "alyssia.fourali.etu@univ-lille.fr"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/alyssia-fourali/video_processing_toolkit/issues"
changelog = "https://github.com/alyssia-fourali/video_processing_toolkit/blob/master/changelog.md"
homepage = "https://github.com/alyssia-fourali/video_processing_toolkit"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

